Fix bags with spacing between sections

--- a/css/style.css
+++ b/css/style.css
@@ -244,7 +244,7 @@ body{
 
 .section-hero{
     background-color: #fae5d3;
-    padding: 6.2rem 0;
+    padding: 9.6rem 0;
 }
 
 .hero-container{
@@ -306,7 +306,8 @@ body{
 /****************************************/
 .how{
     background-color: #fffdfb;
-    margin-top: 6.4rem;
+    padding-top: 6.4rem;
+    padding-bottom: 6.4rem;
 }
 
 .step-number{
@@ -372,6 +373,12 @@ body{
 /****************************************/
 /*FEATURED IN*/
 /****************************************/
+
+.section-featured{
+    padding-top: 8rem;
+    padding-bottom: 6.4rem;
+}
+
 .company-logos{
     display: flex;
     justify-content: space-around;
